--- a/views/site/index.jade
+++ b/views/site/index.jade
@@ -6,7 +6,7 @@ block head
 block content
     #headerwrap
       .container
-        .row
+        .row.animated.fadeIn
           .col-lg-8.col-lg-offset-2
             h3 Talk to people from all over the world
             h1 Practice any language, anytime, anywhere
@@ -17,28 +17,28 @@ block content
     
     #service
       .container
-        .row.centered
+        .row.centered.animated.fadeInUp
           .col-md-4
-            i.fa.fa-heart-o
-            h4 Handsomely Crafted
+            i.fa.fa-globe
+            h4 Talk to the World
             p
-              | Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+              | Meet people from all over the world
             p
               br
               a.btn.btn-theme(href='#') More Info
           .col-md-4
-            i.fa.fa-flask
-            h4 Retina Ready
+            i.fa.fa-language
+            h4 Learn new Languages
             p
-              | Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+              | Here you can learn any language by practicing with people.
             p
               br
               a.btn.btn-theme(href='#') More Info
           .col-md-4
-            i.fa.fa-trophy
-            h4 Quality Theme
+            i.fa.fa-mobile
+            h4 Mobile Ready
             p
-              | Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+              | You can talk anywhere, since you are connected to the internet.
             p
               br
               a.btn.btn-theme(href='#') More Info
