--- a/views/site/layout.jade
+++ b/views/site/layout.jade
@@ -13,6 +13,8 @@ html
     // Custom styles for this template
     link(href='/stylesheets/index.css', rel='stylesheet')
     link(href='/bower_components/font-awesome/css/font-awesome.min.css', rel='stylesheet')
+    
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css')
     // Just for debugging purposes. Don't actually copy this line!
     //if lt IE 9
     //script(src='../../assets/js/ie8-responsive-file-warning.js')
