--- a/public/app/dashboard/directives/chat/partials/directChatBox.html
+++ b/public/app/dashboard/directives/chat/partials/directChatBox.html
@@ -1,15 +1,19 @@
 <!-- DIRECT CHAT SUCCESS -->
+{{vm.partner}}
 <div class="box box-success direct-chat direct-chat-success" style="width:300px" data-drag="true" jqyoui-draggable>
     <div class="box-header with-border" style="cursor:move">
         <h3 class="box-title">Chat with {{vm.partner.name}}</h3>
 
         <div class="box-tools pull-right">
-            <span data-toggle="tooltip" title="3 New Messages" class="badge bg-green">3</span>
+            <!--<span data-toggle="tooltip" title="3 New Messages" class="badge bg-green">3</span>-->
             <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
                 </button>
             <button type="button" class="btn btn-box-tool" data-toggle="tooltip" title="Contacts" data-widget="chat-pane-toggle">
                   <i class="fa fa-comments"></i></button>
-            <button type="button" ng-click="vm.show = false;" class="btn btn-box-tool"><i class="fa fa-times"></i></button>
+                  
+           <button ng-if="vm.hasPartnerLeftRoom === true" type="button" ng-click="vm.leaveRoom(vm.partner)" class="btn btn-box-tool"><i class="fa fa-times"></i></button>
+            <button type="button" ng-if="vm.hasPartnerLeftRoom === false" data-toggle="modal"
+             data-target="#modalLeaveRoomConfirmation" class="btn btn-box-tool"><i class="fa fa-times"></i></button>
         </div>
     </div>
     <!-- /.box-header -->
@@ -34,6 +38,8 @@
                 </div>
                 <!-- /.direct-chat-text -->
             </div>
+            
+            <div class="text-center" data-ng-if="vm.hasPartnerLeftRoom === true">{{::vm.partner.name}} has left the chat room</div>
             <!-- /.direct-chat-msg -->
 
             <!-- Message to the right -->
@@ -79,3 +85,22 @@
     <!-- /.box-footer-->
 </div>
 <!--/.direct-chat -->
+
+
+<div class="modal"  id="modalLeaveRoomConfirmation" style="z-index:9999999999" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog animated bounceIn">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">You are going to leave the chat</h4>
+      </div>
+      <div class="modal-body">
+        <p>Do you really want to leave the chat room?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-ng-click="vm.leaveRoom(vm.partner)" data-dismiss="modal">Yes, I do</button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal">No, I don't</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
